--- a/main.tex
+++ b/main.tex
@@ -854,7 +854,7 @@ In this example, that is md\_file\_create, read\_bytes and write\_bytes metrics:
 
 \paragraph{Phase matching}
 Now we slide the shorter phase over the longer and compute similarity to the corresponding part such that we can find the best match.
-In the example, the best match is found on position five.
+In the example, the best match is found on position four.
 
 \def\mpw{0.32}
 \begin{listing}
@@ -1049,7 +1049,7 @@ In particular we use the agglomerative clustering algorithm, decision trees, and
 
 \subsubsection{Results}
 We conducted several experiments with different $\epsilon$ values between 0 and $\epsilon_{max}$.
-The top 20 largest clusters and total number of clusters is visualized in \Cref{fig:datasets_clustering_results:io_metric} and \Cref{fig:datasets_clustering_results:io_duration} for IO-metric and IO-duration job-profiles, respectively.
+The Top 20 largest clusters and total number of clusters is visualized in \Cref{fig:datasets_clustering_results:io_metric} and \Cref{fig:datasets_clustering_results:io_duration} for IO-metric and IO-duration job-profiles, respectively.
 
 \begin{figure}
  \begin{subfigure}[t]{0.45\textwidth}
